--- a/reinforcement_learning/main.ipynb
+++ b/reinforcement_learning/main.ipynb
@@ -607,12 +607,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "id": "5bqmjQ_C6V0t"
    },
    "outputs": [],
    "source": [
+    "# Implement the Q-Learning off-policy algorithm.\n",
+    "# differently from SARSA, Q-Learning uses the maximum estimated future reward for the next state, regardless of the action taken.\n",
+    "# it can allow for more exploration since it does not depend on the policy being followed.\n",
+    "# it can find the optimal policy but at the cost of more risk.\n",
+    "\n",
     "def QLearning(Q, bins, alpha=0.25, gamma=0.9, epsilon=0.3, episodes=100):\n",
     "  \"\"\"Implement the Q-Learning off-policy algorithm.\"\"\"\n",
     "  eval_results = []\n",
